<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chess</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_automatic">Automatic</string>
    <string name="title_btn_prev">&lt; Prev.</string>
    <string name="title_btn_next">Next &gt;</string>
    <string name="title_computer">Computer</string>
    <string name="title_player">Player</string>
    <string name="title_depth">Search Depth</string>
    <string name="action_simulation">Simulation</string>

</resources>
