<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dexstudio.chess.MainActivity" >

    <com.dexstudio.chess.ui.ChessUiView
        android:id="@+id/chessui"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:baselineAligned="true">
            
            <LinearLayout
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content" 
            	android:orientation="vertical" 
            	android:layout_weight="1">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_computer"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                
	            <Spinner
	                android:id="@+id/sComputerStrategy"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                 />
            
            </LinearLayout>
			
            <LinearLayout
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content" 
            	android:orientation="vertical" 
            	android:layout_weight="1">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_player"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
	            
	            <Spinner
	                android:id="@+id/sPlayerStrategy"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" />
	            
	        </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_depth"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/sDepth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            style="?android:attr/buttonBarStyle"
            >

            <Button
                android:id="@+id/btnPrev"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_btn_prev" />

            <Button
                android:id="@+id/btnNext"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_btn_next" />

        </LinearLayout>

    </LinearLayout>
    
</FrameLayout>
